Opened 12 years ago

Closed 12 years ago

Last modified 12 years ago

#3865 closed defect (fixed)

wavpack: deadlock (fuzzed file)

Reported by: ami_stuff Owned by:
Priority: important Component: avformat
Version: git-master Keywords: wavpack deadlock regression
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

(gdb) r -i deadlockf.wv
Starting program: /media/sdb1/ffmpeg-snapshot/ffmpeg_g -i deadlockf.wv
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib/i386-linux-gnu/libthread_db.so.1".
ffmpeg version 2.3.git Copyright (c) 2000-2014 the FFmpeg developers
  built on Aug 14 2014 23:56:56 with gcc 4.7 (Debian 4.7.2-5)
  configuration: --disable-yasm --enable-gpl --disable-ffserver --disable-ffprobe
  libavutil      54.  3.100 / 54.  3.100
  libavcodec     56.  0.101 / 56.  0.101
  libavformat    56.  1.100 / 56.  1.100
  libavdevice    56.  0.100 / 56.  0.100
  libavfilter     5.  0.100 /  5.  0.100
  libswscale      3.  0.100 /  3.  0.100
  libswresample   1.  0.100 /  1.  0.100
  libpostproc    53.  0.100 / 53.  0.100

Program received signal SIGINT, Interrupt.
0x0818c9db in avio_seek (s=s@entry=0x93aed20, offset=<optimized out>, 
    whence=<optimized out>, whence@entry=1) at libavformat/aviobuf.c:213
213	    pos = s->pos - (s->write_flag ? 0 : buffer_size);
(gdb) bt
#0  0x0818c9db in avio_seek (s=s@entry=0x93aed20, offset=<optimized out>, 
    whence=<optimized out>, whence@entry=1) at libavformat/aviobuf.c:213
#1  0x082a58e0 in avio_tell (s=0x93aed20) at libavformat/avio.h:266
#2  wv_read_block_header (ctx=ctx@entry=0x93af340, pb=pb@entry=0x93aed20)
    at libavformat/wvdec.c:127
#3  0x082a5dc7 in wv_read_header (s=0x93af340) at libavformat/wvdec.c:221
#4  0x08294543 in avformat_open_input (ps=ps@entry=0xbffff43c, 
    filename=filename@entry=0xbffffb74 "deadlockf.wv", fmt=fmt@entry=0x0, 
    options=0x93a884c) at libavformat/utils.c:437
#5  0x080be28d in open_input_file (o=o@entry=0xbffff53c, 
    filename=<optimized out>) at ffmpeg_opt.c:870
#6  0x080b7d17 in open_files (inout=inout@entry=0x8a76cbb "input", 
    open_file=open_file@entry=0x80bdf90 <open_input_file>, 
    l=<error reading variable: Unhandled dwarf expression opcode 0xfa>, 
    l=<error reading variable: Unhandled dwarf expression opcode 0xfa>)
    at ffmpeg_opt.c:2670
#7  0x080bff09 in ffmpeg_parse_options (argc=argc@entry=3, 
    argv=argv@entry=0xbffff9e4) at ffmpeg_opt.c:2707
#8  0x080af43a in main (argc=3, argv=0xbffff9e4) at ffmpeg.c:3824
(gdb) 

Attachments (1)

deadlockf.wv (364.2 KB ) - added by ami_stuff 12 years ago.

Download all attachments as: .zip

Change History (4)

by ami_stuff, 12 years ago

Attachment: deadlockf.wv added

comment:1 by Carl Eugen Hoyos, 12 years ago

Component: undeterminedavformat
Keywords: wavpack deadlock added
Priority: normalimportant
Reproduced by developer: set
Status: newopen
Version: unspecifiedgit-master

comment:2 by Elon Musk, 12 years ago

Resolution: fixed
Status: openclosed

comment:3 by Carl Eugen Hoyos, 12 years ago

Keywords: regression added

Regression since 8a485dd3

Note: See TracTickets for help on using tickets.